fixed spacing bug

--- a/9b-weather/src/App.css
+++ b/9b-weather/src/App.css
@@ -32,7 +32,7 @@ h1 {
   margin-top: 0;
   font-size: 30px;
   font-family: 'Roboto', sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   color: white;
 }
 
