--- a/9b-weather/src/components/Conditions/Conditions.module.css
+++ b/9b-weather/src/components/Conditions/Conditions.module.css
@@ -1,7 +1,8 @@
 .Wrapper {
   min-height: 100px;
   flex-direction: column;
-  margin: 50px;
+  /* fixed the spacing bug */
+  margin: 10px auto;
   background-color: rgba(250, 250, 250, 0.2);
   width: 200px;
   height: 300px;
@@ -11,7 +12,7 @@
 p {
   color: white;
   font-size: 20px;
-  font-weight: 300;
+  font-weight: 400;
   /* 1: x-coordinate, 2: y-coordinate, 3: blur-radius, 4: color */
   text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.9);
 }
